2005-12-30  Maks Orlovich <maksim@kde.org>

        Reviewed and committed by Maciej.

	- Handle negative, FP numbers with non-10 radix in toString
	http://bugzilla.opendarwin.org/show_bug.cgi?id=6259

        (Merged from KJS, original work by Harri Porten)
	
        * kjs/number_object.cpp:
        (NumberProtoFunc::callAsFunction): rewrote Number.toString(radix) to work with  
	negative numbers, floating point and very large numbers.

2005-12-29  Geoffrey Garen  <ggaren@apple.com>

        Patch by Maks Orlovich, reviewed and landed by me.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=6267
        Fix Number.prototype.toFixed/toExponential(undefined)

        * kjs/number_object.cpp:
        (NumberProtoFunc::callAsFunction):

2005-12-29  Geoffrey Garen  <ggaren@apple.com>

        Patch by Maks Orlovich, Reviewed and landed by me.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=6266
        Minor object naming updates (to match Mozilla, KJS)

        * kjs/number_object.cpp:
        * kjs/regexp_object.cpp:

2005-12-29  Geoffrey Garen  <ggaren@apple.com>

        Patch by Maks Orlovich, reviewed by mjs.

        This has 2 very minor fixes, covered by KJS testsuite:    
        1. Enumerates string indices in property list (with the same bug as array    
           object has in corresponding code). This is a mozilla emulation thing. 
        2. Permits properties with integer names in prototypes to be found    

        * kjs/string_object.cpp:
        (StringInstance::getOwnPropertySlot):
        (StringInstanceImp::propList):
        * kjs/string_object.h:

2005-12-26  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by mjs.

        - Fixed <rdar://problem/4364705> run-javascriptcore-tests crashes in 
        KJS::BlockNode::deref 
        AKA 
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6233
        Reproducible stack-overflow crash in ~RefPtr<T> due to RefPtr<T> use in 
        linked lists
